add downloads badge back

--- a/readme.eex
+++ b/readme.eex
@@ -2,7 +2,7 @@
 
 [![Hex.pm](https://img.shields.io/hexpm/v/rusult)](https://hex.pm/packages/rusult)
 ![Hex.pm](https://img.shields.io/hexpm/l/rusult)
-![Hex.pm](https://img.shields.io/hexpm/l/rusult)
+![Hex.pm](https://img.shields.io/hexpm/dt/rusult)
 
 ## Installation
 
